<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@drawable/bg_appli">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp">

        <TextView
            android:text="@string/tv_titel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_titel"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:textStyle="normal|bold" />

        <TextView
            android:text="@string/tv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_content"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginTop="20dp" />

        <TextView
            android:text="@string/tv_nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_nom"
            android:textSize="18sp"
            android:layout_marginTop="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/et_name"
            android:ems="10"
            android:id="@+id/et_name"
            android:background="?attr/colorButtonNormal"
            android:minHeight="30dp" />

        <TextView
            android:text="@string/tv_prenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_prenom"
            android:textSize="18sp"
            android:layout_marginTop="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/et_firstname"
            android:ems="10"
            android:id="@+id/et_firstname"
            android:background="?attr/colorButtonNormal"
            android:minHeight="30dp" />

        <TextView
            android:text="@string/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_email"
            android:textSize="18sp"
            android:layout_marginTop="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/et_email"
            android:hint="@string/et_email"
            android:background="?attr/colorButtonNormal"
            android:minHeight="30dp" />

        <TextView
            android:text="@string/tv_mdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_mdp"
            android:textSize="18sp"
            android:layout_marginTop="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/et_mdp"
            android:inputType="textPassword"
            android:hint="@string/et_mdp"
            android:background="?attr/colorButtonNormal"
            android:minHeight="30dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/btn_subscribe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_subscribe"
            android:onClick="onClickChoixLanguesFromInscription" />

        <Button
            android:text="@string/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_login"
            android:onClick="onClickLoginFromInscription" />

    </LinearLayout>
</LinearLayout>