<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:text="@string/btn_back"
        android:layout_height="wrap_content"
        android:id="@+id/btn_back"
        android:layout_width="114dp"
        android:onClick="onClickBackToParamFromNavLanguage" />

    <TextView
        android:text="@string/tv_boardlanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_boardlanguage"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:layout_marginTop="20dp" />

    <TextView
        android:text="@string/tv_selectLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_selectLanguage"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:textAlignment="center" />

    <Button
        android:text="@string/btn_fr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_fr"
        android:elevation="1dp"
        android:layout_marginTop="20dp" />

    <Button
        android:text="@string/btn_en"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_en" />

    <Button
        android:text="@string/btn_edit"
        android:layout_height="wrap_content"
        android:id="@+id/btn_edit"
        android:layout_width="222dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="50dp"
        android:onClick="onClickModify" />

</LinearLayout>