<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jon.projectlearnlanguage.EditorZone.CreateUser"
    android:orientation="vertical">

    <Button
        android:text="@string/btn_back"
        android:layout_height="wrap_content"
        android:id="@+id/btn_backToSelectActionFromCW"
        android:layout_width="wrap_content"
        android:onClick="onClickBackToUserView"/>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp">

        <TextView
            android:text="@string/tv_titel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_titel"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_marginTop="20dp" />

        <TextView
            android:text="@string/tv_nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_name"
            android:textSize="18sp"
            android:layout_marginTop="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/et_name"
            android:ems="10"
            android:id="@+id/et_name"
            android:background="?attr/colorButtonNormal"
            android:minHeight="30dp" />

        <TextView
            android:text="@string/tv_prenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_firstname"
            android:textSize="18sp"
            android:layout_marginTop="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/et_firstname"
            android:ems="10"
            android:id="@+id/et_firstname"
            android:background="?attr/colorButtonNormal"
            android:minHeight="30dp" />

        <TextView
            android:text="@string/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_email"
            android:textSize="18sp"
            android:layout_marginTop="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/et_email"
            android:text="@string/et_email"
            android:background="?attr/colorButtonNormal"
            android:minHeight="30dp" />

        <TextView
            android:text="@string/tv_mdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_mdp"
            android:textSize="18sp"
            android:layout_marginTop="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/et_mdp"
            android:inputType="textPassword"
            android:text="@string/et_mdp"
            android:background="?attr/colorButtonNormal"
            android:minHeight="30dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/ez_modify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_modifyUser"
            android:onClick="onClickModifyUser" />

        <Button
            android:text="@string/ez_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_deleteUser"
            android:onClick="onClickDeleteUser" />

    </LinearLayout>

</LinearLayout>
