<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:text="@string/btn_back"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_back"
        android:onClick="onClickBackToParam" />

    <TextView
        android:text="@string/tv_changemdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_changemdp"
        android:textSize="35sp"
        android:textAlignment="center"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/et_mdpactuel"
        android:text="@string/et_mdpactuel"
        android:layout_marginTop="20dp"
        android:background="?attr/colorButtonNormal"
        android:minHeight="30dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/et_newmdp"
        android:text="@string/et_newmdp"
        android:layout_marginTop="20dp"
        android:background="?attr/colorButtonNormal"
        android:minHeight="30dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/et_confirmmdp"
        android:text="@string/et_confirmmdp"
        android:layout_marginTop="20dp"
        android:background="?attr/colorButtonNormal"
        android:minHeight="30dp" />

    <Button
        android:text="@string/btn_edit"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_edit"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:layout_marginLeft="80dp"
        android:onClick="onClickModifyMDP" />
</LinearLayout>