<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_textes_trous"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg_appli">

    <Button
        android:text="@string/btn_back"
        android:layout_height="wrap_content"
        android:id="@+id/btn_backToCoursViewFromModDelCours"
        android:layout_width="wrap_content" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/TextesTrous"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true">>

        <TextView
            android:text="@string/tv_texteTrou"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_texteTrou"
            android:textAlignment="center"
            android:textSize="36sp"
            android:layout_below="@+id/BackToVocabulaire"
            android:layout_alignParentStart="true"
            android:textColor="@android:color/black"
            android:layout_alignParentLeft="true" />

        <TextView
            android:text="@string/tv_selectAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_selectAnswer"
            android:textAlignment="center"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp">

        <TextView
            android:text="@string/tv_question1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_question1"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@android:color/black" />

        <TextView
            android:text="@string/tv_question2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_question2"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_marginTop="5dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <Button
            android:text="@string/btn_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_red"
            android:layout_weight="1" />

        <Button
            android:text="@string/btn_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_blue"
            android:layout_weight="1" />

        <Button
            android:text="@string/btn_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_green"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:text="@string/tv_correct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_correct"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="36sp" />

    <Button
        android:text="@string/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_continue" />

</LinearLayout>
