<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@drawable/bg_appli">

    <TextView
        android:text="@string/tv_titel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_titel"
        android:fontFamily="sans-serif"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_weight="0.07"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_email"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:layout_weight="0.08"
        android:paddingLeft="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/et_email"
        android:fontFamily="sans-serif"
        android:background="?attr/colorButtonNormal"
        android:minHeight="40dp"
        android:paddingLeft="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:hint="@string/et_email" />

    <TextView
        android:text="@string/tv_mdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_mdp"
        android:layout_weight="0.07"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/et_mdp"
        android:background="?attr/colorButtonNormal"
        android:minHeight="40dp"
        android:paddingLeft="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:fontFamily="sans-serif"
        android:textSize="18sp"
        android:hint="@string/et_mdp" />

    <Button
        android:text="@string/btn_connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_connection"
        android:elevation="0dp"
        android:fontFamily="sans-serif-medium"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:onClick="onClickChoixLanguesFromLogin" />

    <Button
        android:text="@string/btn_subscribe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_subscribe"
        style="@style/Widget.AppCompat.Button"
        android:layout_marginTop="20dp"
        android:onClick="onClickIncriptionFromLogin" />
</LinearLayout>