<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_select_action"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.jon.projectlearnlanguage.EditorZone.SelectAction">

    <Button
        android:text="@string/btn_back"
        android:layout_height="wrap_content"
        android:id="@+id/btn_backToUserViewFromCreateUser"
        android:layout_width="wrap_content"
        android:onClick="onClickBackToWelcomePage" />

            <TextView
            android:text="@string/tv_titel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_titel"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_marginTop="20dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp">


            <Button
                android:text="@string/GoToUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/GoToUserView"
                android:onClick="onClickSelectUsers" />

            <Button
                android:text="@string/GotoCours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/GoToCoursView"
                android:onClick="onClickSelectCours" />

            <Button
                android:text="@string/GoToExercise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/GoToExercisesView"
                android:onClick="onClickSelectExercises" />

            <Button
                android:text="@string/GoToChoice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/GoToChoiceView"
                android:onClick="onClickSelectChoice" />

        </LinearLayout>

</LinearLayout>
